@@ -256,7 +256,8 @@ generic OS bug).
 \begin{description}
     \item [Package:] (required) Package name and version, separated by space
 
-    \item [PackageArchitecture:] (required) Processor architecture the package
+    \item [PackageArchitecture:] (required if different from
+    \verb!Architecture!) Processor architecture the package
     was built for; there are some architectures (like \verb!x86_64! or
     \verb!sparc64!) which support multiple package architectures
 
