@@ -28,8 +28,11 @@ apport (0.111) UNRELEASED; urgency=low
     report it against the actual kernel package.
   * debian/local/ubuntu-bug: If just one argument is given, infer -p/-P from
     the type of the argument.
+  * apport/ui.py: Drop the PackageArchitecture field for the uploaded report
+    if it is equal to Architecture. Adapt apport/crashdb_impl/launchpad.py to
+    fall back to Architecture, and mention the change in doc/data-format.tex.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 05 Aug 2008 13:18:11 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 05 Aug 2008 14:28:15 +0200
 
 apport (0.110) intrepid; urgency=low
 
